[project]
name = "openresponses-impl-core"
version = "0.1.0"
description = "Python Client library implementing the OpenResponses specification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
