[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openresponses-impl-core"
version = "0.2.0"
description = "Python Client library implementing the OpenResponses specification"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "rsato", email = "satookok@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/post-class/openresponses-impl-core"
Repository = "https://github.com/post-class/openresponses-impl-core"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
